margin issues on small device on top3 and cafes pages fixed

--- a/assets/css/cafeDublin.css
+++ b/assets/css/cafeDublin.css
@@ -46,7 +46,7 @@ body {
 }
 
 .navbar-collapse {
-    background-color:var(--navbarBgColor); 
+    background-color: var(--navbarBgColor);
 }
 
 .navbar-nav {
@@ -144,13 +144,13 @@ p {
 
 
 /*----------------------------footer*/
-.fixed-bottom {
+.footer-container {
     background-color: var(--bodyContainerColor);
 }
 
 .footer-outer {
 
-    padding: 10px;
+    padding: 10px 10px 10px 10px;
 
 }
 
@@ -212,6 +212,7 @@ p {
     background: #f4873b;
 }
 
+
 /*--------------------------------------------------------------------------------------Media Queries--*/
 
 
@@ -241,6 +242,12 @@ p {
         padding: 20px 20px 40px 20px;
     }
 
+    .formContainer {
+        margin-top: 50px;
+        padding: 0;
+        position: relative;
+    }
+
 
 
     .cafeHeadingText {
@@ -259,6 +266,7 @@ p {
     p {
         font-size: 18px;
     }
+
 
 
 }
@@ -292,8 +300,9 @@ p {
     /* cafe images */
 
     .cafeDublin-container {
-        margin: 30% 10px;
-        padding: 5px;
+        margin: 25% auto;
+    padding: 5px;
+
     }
 
     .cafePhoto img {
@@ -343,16 +352,17 @@ p {
     .list-inline {
         margin: 10px 60px 10px 5px;
     }
-
 }
 
 /* --------------------------------------------------------------------mxa-width:350px */
+
+
 @media only screen and (max-width: 350px) {
-   .footer-outer {
+    .footer-outer {
         padding: 0px;
     }
 
     .list-inline {
         margin: 10px 40px 10px 5px;
-    }  
+    }
 }
