--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -326,17 +326,27 @@ img {
     }
 
 
+
+
+   /* footer */
+    .footer-outer {
+        padding: 0px;
+    }
+
+    .list-inline {
+        margin: 10px 60px 10px 5px;
+    }
 }
 
 /* --------------------------------------------------------------------mxa-width:350px */
 
 
 @media only screen and (max-width: 350px) {
-   .footer-outer {
+    .footer-outer {
         padding: 0px;
     }
 
     .list-inline {
         margin: 10px 40px 10px 5px;
-    }  
+    }
 }
