--- a/assets/css/top3.css
+++ b/assets/css/top3.css
@@ -13,7 +13,7 @@ html {
 
 body {
     width: 100%;
-    height: 200%;
+    height: auto;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -272,7 +272,7 @@ h3 {
 
 
     #gallaryheading {
-        font-family: 'Poppins', sans-serif;
+        
         margin-top: 20px;
         font-size: 180%;
         font-weight: 500;
@@ -285,8 +285,8 @@ h3 {
         font-size: 24px;
     }
 
-    .card-body h2 {
-        font-size: 25px;
+    .card-body h3 {
+        font-size: 18px;
     }
 
     .my-col {
@@ -335,7 +335,7 @@ h3 {
     }
 
     .gallary-container {
-        margin: 15% auto;
+        margin: 30% auto;
         padding: 5px;
     }
 
@@ -353,11 +353,12 @@ h3 {
 
 
 
-    .card-body h2 {
-        font-size: 22px;
+    .card-body h3 {
+        font-size: 18px;
     }
+     
 
-    /* footer */
+   /* footer */
     .footer-outer {
         padding: 0px;
     }
@@ -365,15 +366,17 @@ h3 {
     .list-inline {
         margin: 10px 60px 10px 5px;
     }
-
 }
 
+/* --------------------------------------------------------------------mxa-width:350px */
+
+
 @media only screen and (max-width: 350px) {
-   .footer-outer {
+    .footer-outer {
         padding: 0px;
     }
 
     .list-inline {
         margin: 10px 40px 10px 5px;
-    }  
+    }
 }
